--- a/app/info.html
+++ b/app/info.html
@@ -39,7 +39,7 @@
       </section>
       <footer>
         <p>
-          <small>(cc) 2016 SkelEktron</small>
+          <small>(cc) 2017 Easter Project</small>
         </p>
       </footer>
       <p><a class="ui-text" id="close" href="javascript:window.close()">Close</a></p>
