--- a/app/index.html
+++ b/app/index.html
@@ -1,38 +1,47 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="assets/css/app.css">
+    <meta charset="UTF-8">
+    <title>BitCrypt</title>
+    <script src="app.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="assets/css/app.css" type="text/css"/>
   </head>
-  <body>
-    <div class="container">
-      <header>
-        <h1>Hello World!</h1>
-      </header>
-      <section class="main">
-        <h2>This is SkelEktron, an unofficial Electron application template</h2>
-
-        <h3>Core Features</h3>
-
-        <ul>
-          <li>A smart cross-platform logger</li>
-          <li>A ready-to-go auto updater (you just need to hook in a <a href="https://github.com/ArekSredzki/electron-release-server">working server</a>)</li>
-          <li>Built-in support for <a href="https://www.npmjs.com/package/electron-builder">Electron Builder</a></li>
-          <li>Built-in support for different <em>build targets</em> (ie. release, debug, test, etc) with different settings</li>
-          <li>Optional printer management, provided by <a href="https://www.npmjs.com/package/printer">printer</a></li>
-        </ul>
-      </section>
-      <footer>
-        <p>
-          <small>
-            <!-- All of the Node.js APIs are available in this renderer process. -->
-            We are using node <script>document.write(process.versions.node)</script>,
-            Chromium <script>document.write(process.versions.chrome)</script>,
-            and Electron <script>document.write(process.versions.electron)</script>.
-          </small>
-        </p>
-      </footer>
+  <body unselectable="on" onselectstart="return false;">
+    <header class="title-bar"></header>
+    <main-area>
+      <drop-zone id="lock-zone"></drop-zone>
+      <drop-zone id="unlock-zone"></drop-zone>
+    </main-area>
+    <div class="switch">
+        <input id="delete-files" class="cmn-toggle cmn-toggle-round" type="checkbox">
+        <label for="delete-files"></label>
+        <span>Delete original files</span>
+      </div>
+    <prompt-box id="unlock-prompt">
+      <form>
+        <div class="prompt-title mb05em"></div>
+        <input required id="password-input" name="password-input" type="password" placeholder="password" class="mb05em"/>
+        <span id="error-message" class="mb05em"></span>
+        <button id="password-button-ok" type="submit">OK</button>
+        <button id="password-button-cancel" type="button">Cancel</button>
+        <span id="password-hint"></span>
+      </form>
+    </prompt-box>
+    <prompt-box id="lock-prompt">
+      <form>
+        <div class="prompt-title mb05em"></div>
+        <div class="input-col mb05em">
+          <input required id="password-input" name="password-input" type="password" placeholder="password"/>
+          <input required id="confirm-input" name="confirm-input" type="password" placeholder="confirm"/>
+        </div>
+        <div class="mb05em">Please enter a password hint:</div>
+        <input required id="hint-input" name="hint-input" type="text" class="mb05em"/>
+        <button id="password-button-ok" type="submit">OK</button>
+        <button id="password-button-cancel" type="button">Cancel</button>
+      </form>
+    </prompt-box>
+    <div class="progress-bar blue stripes">
+        <span style="width: 40%"></span>
     </div>
   </body>
   <script>
